ADD: new provider for '1AImmobilien' / CHANGE: removing rootPath dependency, readme adjustments

--- a/conf/config.example
+++ b/conf/config.example
@@ -32,6 +32,10 @@
     "kalaydo": {
       "url": "https://www.kalaydo.de/...",
       "enabled": true
+    },
+    "einsAImmobilien":{
+      "url": "https://www.1a-immobilienmarkt.de/...",
+      "enabled": true
     }
   },
   "blacklist": [
