--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mocha": "^4.1.0",
     "request-x-ray": "^0.1.4",
     "slack": "^10.0.0",
+    "tg-yarl": "^1.3.0",
     "x-ray": "^2.3.2"
   },
   "devDependencies": {
