IMPROVEMENT: improve readme, add telegram to config example

--- a/conf/config.example
+++ b/conf/config.example
@@ -10,7 +10,12 @@
     },
     "console": {
       "enabled": true
-    }
+    },
+    "telegram": {
+          "chatId": "",
+          "token": "",
+          "enabled": false
+        },
   },
   "sources": {
     "immoscout": {
