ADD: new Neubaukompass provider | FIX: tests, console notifier

--- a/conf/config.example
+++ b/conf/config.example
@@ -41,6 +41,9 @@
     "einsAImmobilien":{
       "url": "https://www.1a-immobilienmarkt.de/...",
       "enabled": true
+    },"neubauKompass": {
+       "url": "https://www.neubaukompass.de/...",
+       "enabled": true
     }
   },
   "blacklist": [
