adding wg-gesucht as provider

--- a/conf/config.example
+++ b/conf/config.example
@@ -44,6 +44,10 @@
     },"neubauKompass": {
        "url": "https://www.neubaukompass.de/...",
        "enabled": true
+    },
+    "wgGesucht": {
+      "url": "https://www.wg-gesucht.de/...",
+      "enabled": true
     }
   },
   "blacklist": [
