--- a/package.json
+++ b/package.json
@@ -28,16 +28,16 @@
   },
   "license": "MIT",
   "dependencies": {
-    "chai": "^4.2.0",
-    "lowdb": "^1.0.0",
-    "request-x-ray": "^0.1.4",
-    "slack": "^10.1.1",
-    "tg-yarl": "^1.3.0",
-    "x-ray": "^2.3.3"
+    "chai": "4.2.0",
+    "lowdb": "1.0.0",
+    "request-x-ray": "0.1.4",
+    "slack": "10.1.1",
+    "tg-yarl": "1.3.0",
+    "x-ray": "2.3.3"
   },
   "devDependencies": {
-    "mocha": "^6.1.4",
-    "prettier": "^1.18.2",
-    "proxyquire": "^1.8.0"
+    "mocha": "6.1.4",
+    "prettier": "1.18.2",
+    "proxyquire": "1.8.0"
   }
 }
