--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
   },
   "license": "MIT",
   "dependencies": {
-    "chai": "4.2.0",
     "lowdb": "1.0.0",
     "request-x-ray": "0.1.4",
     "slack": "11.0.2",
@@ -36,8 +35,9 @@
     "x-ray": "2.3.4"
   },
   "devDependencies": {
-    "mocha": "6.2.2",
-    "prettier": "1.18.2",
-    "proxyquire": "1.8.0"
+    "mocha": "7.0.1",
+    "prettier": "1.19.1",
+    "proxyquire": "1.8.0",
+    "chai": "4.2.0"
   }
 }
