--- a/conf/config.example
+++ b/conf/config.example
@@ -1,66 +1,87 @@
 {
-  "interval": 10,
-  "enableStats": false,
-  "statsPort": 9875,
-  "notification": {
-    "slack": {
-      "token": "someToken",
-      "channel": "someChannel",
-      "enabled": false
-    },
-    "console": {
-      "enabled": true
-    },
-    "telegram": {
+  "interval": 1,
+  "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/40.0.2214.85 Safari/537.36",
+  "jobs": {
+    "yourSearchJob": {
+      "notification": {
+        "slack": {
+          "token": "",
+          "channel": "",
+          "enabled": false
+        },
+        "telegram": {
           "chatId": "",
           "token": "",
           "enabled": false
         },
-  },
-  "sources": {
-    "immoscout": {
-      "url": "https://www.immobilienscout24.de/...",
-      "enabled": true
-    },
-    "immonet": {
-      "url": "https://www.immonet.de/...",
-      "enabled": true
-    },
-    "immowelt": {
-      "url": "https://www.immowelt.de/...",
-      "enabled": true
-    },
-    "kleinanzeigen": {
-      "url": "https://www.ebay-kleinanzeigen.de/...",
-      "enabled": true
-    },
-    "kalaydo": {
-      "url": "https://www.kalaydo.de/...",
-      "enabled": true
-    },
-    "einsAImmobilien":{
-      "url": "https://www.1a-immobilienmarkt.de/...",
-      "enabled": true
-    },"neubauKompass": {
-       "url": "https://www.neubaukompass.de/...",
-       "enabled": true
-    },
-    "wgGesucht": {
-      "url": "https://www.wg-gesucht.de/...",
-      "enabled": true
+        "console": {
+          "enabled": true
+        }
+      },
+      "provider": {
+        "immoscout": {
+          "url": "https://www.immobilienscout24.de/...",
+          "enabled": true
+        },
+        "immonet": {
+          "url": "https://www.immonet.de/immobiliensuche/...",
+          "enabled": true
+        },
+        "immowelt": {
+          "url": "https://www.immowelt.de/liste/...",
+          "enabled": true
+        },
+        "kleinanzeigen": {
+          "url": "https://www.ebay-kleinanzeigen.de/...",
+          "enabled": true
+        },
+        "kalaydo": {
+          "url": "https://www.kalaydo.de/immobilien/...",
+          "enabled": true
+        },
+        "abInsZuHause": {
+          "url": "https://ab-ins-zuhause.de/neues-zuhause-finden/...",
+          "enabled": true
+        },
+        "einsAImmobilien": {
+          "url": "https://www.1a-immobilienmarkt.de/suchen/...",
+          "enabled": true
+        },
+        "neubauKompass": {
+          "url": "https://www.neubaukompass.de/...",
+          "enabled": true
+        },
+        "wgGesucht": {
+          "url": "https://www.wg-gesucht.de/...",
+          "enabled": true
+        }
+      },
+      "blacklist": [
+        "Vermietete",
+        "Vermietet",
+        "vermietete",
+        "vermietet"
+      ],
+      "blacklistedDistricts": [
+        "Altstadt",
+        "Angermund",
+        "Carlstadt",
+        "Friedrichstadt",
+        "Heerdt",
+        "Hellerhof",
+        "Hubbelrath",
+        "Itter",
+        "Kalkum",
+        "Lichtenbroich",
+        "Lohausen",
+        "Niederkassel",
+        "Oberkassel",
+        "Stadtmittel",
+        "Stockum",
+        "Urdenbach",
+        "Wittlaer",
+        "Lörick"
+      ]
     }
-  },
-  "blacklist": [
-    "swap",
-    "tausch",
-    "wg",
-    "Vermietete",
-    "Vermietet",
-    "vermietete",
-    "vermietet"
-  ],
-  "blacklistedDistrics": [
-    "some District you don't want"
-  ],
-  "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/40.0.2214.85 Safari/537.36"
+  }
 }
