--- a/package.json
+++ b/package.json
@@ -1,11 +1,22 @@
 {
-  "name": "Fredy",
-  "version": "1.3.0",
+  "name": "fredy",
+  "version": "2.0.0",
   "description": "[F]ind [R]eal [E]states [d]amn eas[y].",
   "scripts": {
     "start": "node index.js",
     "format": "prettier --write lib/**/*.js test/**/*.js *.js --single-quote --print-width 120",
-    "test": "mocha --timeout 12000"
+    "test": "mocha --timeout 15000 test/**/*.test.js"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint ./index.js ./lib/**/*.js ./test/**/*.js",
+      "prettier --single-quote --print-width 120 --write"
+    ]
   },
   "main": "index.js",
   "author": "Christian Kellner",
@@ -27,17 +38,27 @@
     "url": "https://github.com/orangecoding/fredy/issues"
   },
   "license": "MIT",
+  "engines": {
+    "node": ">=11.0.0",
+    "npm": ">=6.0.0"
+  },
   "dependencies": {
+    "body-parser": "1.19.0",
     "lowdb": "1.0.0",
     "request-x-ray": "0.1.4",
+    "restana": "4.0.8",
     "slack": "11.0.2",
     "tg-yarl": "1.3.0",
     "x-ray": "2.3.4"
   },
   "devDependencies": {
-    "mocha": "7.0.1",
+    "chai": "4.2.0",
+    "eslint": "6.8.0",
+    "eslint-config-prettier": "6.10.0",
+    "husky": "4.2.3",
+    "lint-staged": "10.0.8",
+    "mocha": "7.1.0",
     "prettier": "1.19.1",
-    "proxyquire": "1.8.0",
-    "chai": "4.2.0"
+    "proxyquire": "2.1.3"
   }
 }
