--- a/package.json
+++ b/package.json
@@ -43,17 +43,18 @@
     "npm": ">=6.0.0"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.2.1",
     "body-parser": "1.19.0",
     "lowdb": "1.0.0",
     "request-x-ray": "0.1.4",
-    "restana": "4.6.1",
+    "restana": "4.6.2",
     "slack": "11.0.2",
     "tg-yarl": "1.3.0",
     "x-ray": "2.3.4"
   },
   "devDependencies": {
     "chai": "4.2.0",
-    "eslint": "7.3.0",
+    "eslint": "7.4.0",
     "eslint-config-prettier": "6.11.0",
     "husky": "4.2.5",
     "lint-staged": "10.2.11",
