adding Mailjet as new adapter :tada:

--- a/conf/config.example
+++ b/conf/config.example
@@ -21,6 +21,13 @@
           "templateId": "",
           "enabled": false
         },
+        "mailJet": {
+          "apiPublicKey": "",
+          "apiPrivateKey": "",
+          "receiver": "",
+          "from": "",
+          "enabled": false
+        },
         "console": {
           "enabled": true
         }
