--- a/package.json
+++ b/package.json
@@ -43,22 +43,24 @@
     "npm": ">=6.0.0"
   },
   "dependencies": {
-    "@sendgrid/mail": "^7.2.1",
+    "@sendgrid/mail": "^7.2.3",
     "body-parser": "1.19.0",
+    "handlebars": "^4.7.6",
     "lowdb": "1.0.0",
+    "node-mailjet": "^3.3.1",
     "request-x-ray": "0.1.4",
-    "restana": "4.6.2",
+    "restana": "4.7.2",
     "slack": "11.0.2",
     "tg-yarl": "1.3.0",
     "x-ray": "2.3.4"
   },
   "devDependencies": {
     "chai": "4.2.0",
-    "eslint": "7.4.0",
+    "eslint": "7.7.0",
     "eslint-config-prettier": "6.11.0",
     "husky": "4.2.5",
     "lint-staged": "10.2.11",
-    "mocha": "8.0.1",
+    "mocha": "8.1.1",
     "prettier": "2.0.5",
     "proxyquire": "2.1.3"
   }
