using correct link to repo in docker compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       context: ./build
       dockerfile: Dockerfile
       args:
-        repo: https://github.com/anbucher/fredy.git
+        repo: https://github.com/orangecoding/fredy.git
     image: fredy/fredy
     # map existing config and database
     volumes:
