--- a/package.json
+++ b/package.json
@@ -53,34 +53,34 @@
   "dependencies": {
     "@rematch/core": "2.0.1",
     "@rematch/loading": "2.0.1",
-    "@sendgrid/mail": "7.4.2",
-    "axios": "^0.21.1",
+    "@sendgrid/mail": "7.4.4",
+    "axios": "0.21.1",
     "body-parser": "1.19.0",
-    "cookie-session": "^1.4.0",
+    "cookie-session": "1.4.0",
     "handlebars": "4.7.7",
-    "highcharts": "9.0.1",
-    "highcharts-react-official": "^3.0.0",
+    "highcharts": "9.1.0",
+    "highcharts-react-official": "3.0.0",
     "lowdb": "1.0.0",
     "markdown": "^0.5.0",
-    "nanoid": "^3.1.22",
+    "nanoid": "3.1.23",
     "node-mailjet": "3.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-redux": "7.2.3",
+    "react-redux": "7.2.4",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-switch": "^6.0.0",
-    "redux": "4.0.5",
+    "redux": "4.1.0",
     "redux-thunk": "2.3.0",
-    "restana": "4.8.1",
+    "restana": "4.9.1",
     "semantic-ui-react": "2.0.3",
     "serve-static": "^1.14.1",
     "slack": "11.0.2",
     "x-ray": "2.3.4"
   },
   "devDependencies": {
-    "@babel/core": "7.13.13",
-    "@babel/preset-env": "7.13.12",
+    "@babel/core": "7.14.2",
+    "@babel/preset-env": "7.14.2",
     "@babel/preset-react": "7.13.13",
     "babel-eslint": "10.1.0",
     "babel-loader": "8.2.2",
@@ -88,7 +88,7 @@
     "clean-webpack-plugin": "3.0.0",
     "copy-webpack-plugin": "6.3.0",
     "css-loader": "5.0.1",
-    "eslint": "7.23.0",
+    "eslint": "7.26.0",
     "eslint-config-prettier": "7.1.0",
     "eslint-plugin-react": "7.23.1",
     "file-loader": "6.2.0",
@@ -97,8 +97,8 @@
     "less": "4.1.1",
     "less-loader": "7.2.1",
     "lint-staged": "10.5.4",
-    "mocha": "8.3.2",
-    "prettier": "2.2.1",
+    "mocha": "8.4.0",
+    "prettier": "2.3.0",
     "proxyquire": "2.1.3",
     "redux-logger": "3.0.6",
     "style-loader": "2.0.0",
