--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "semantic-ui-react": "2.0.3",
     "serve-static": "^1.14.1",
     "slack": "11.0.2",
+    "string-similarity": "^4.0.4",
     "x-ray": "2.3.4"
   },
   "devDependencies": {
