--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fredy",
-  "version": "5.1.0",
+  "version": "5.2.0",
   "description": "[F]ind [R]eal [E]states [d]amn eas[y].",
   "scripts": {
     "start": "node index.js",
@@ -53,12 +53,12 @@
   "dependencies": {
     "@rematch/core": "2.0.1",
     "@rematch/loading": "2.0.1",
-    "@sendgrid/mail": "7.4.4",
+    "@sendgrid/mail": "7.4.5",
     "axios": "0.21.1",
     "body-parser": "1.19.0",
     "cookie-session": "1.4.0",
     "handlebars": "4.7.7",
-    "highcharts": "9.1.0",
+    "highcharts": "9.1.2",
     "highcharts-react-official": "3.0.0",
     "lowdb": "1.0.0",
     "markdown": "^0.5.0",
@@ -76,36 +76,37 @@
     "semantic-ui-react": "2.0.3",
     "serve-static": "^1.14.1",
     "slack": "11.0.2",
+    "string-similarity": "^4.0.4",
     "x-ray": "2.3.4"
   },
   "devDependencies": {
-    "@babel/core": "7.14.3",
-    "@babel/preset-env": "7.14.2",
-    "@babel/preset-react": "7.13.13",
+    "@babel/core": "7.14.6",
+    "@babel/preset-env": "7.14.7",
+    "@babel/preset-react": "7.14.5",
     "babel-eslint": "10.1.0",
     "babel-loader": "8.2.2",
     "chai": "4.3.4",
     "clean-webpack-plugin": "3.0.0",
-    "copy-webpack-plugin": "9.0.0",
+    "copy-webpack-plugin": "9.0.1",
     "css-loader": "5.2.6",
-    "eslint": "7.27.0",
+    "eslint": "7.29.0",
     "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-react": "7.23.2",
+    "eslint-plugin-react": "7.24.0",
     "file-loader": "6.2.0",
     "history": "5.0.0",
     "husky": "4.3.8",
     "less": "4.1.1",
-    "less-loader": "9.0.0",
+    "less-loader": "10.0.0",
     "lint-staged": "11.0.0",
-    "mocha": "8.4.0",
-    "prettier": "2.3.0",
+    "mocha": "9.0.1",
+    "prettier": "2.3.2",
     "proxyquire": "2.1.3",
     "redux-logger": "3.0.6",
-    "style-loader": "2.0.0",
+    "style-loader": "3.0.0",
     "url-loader": "4.1.1",
-    "webpack": "5.37.1",
+    "webpack": "5.40.0",
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "3.11.2",
-    "webpack-merge": "5.7.3"
+    "webpack-merge": "5.8.0"
   }
 }
