--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "yarn && export BUILD_DEV='true' && export NODE_ENV='development' && webpack-dev-server --progress --colors --watch --config ./webpack.dev.js",
     "prod": "export BUILD_DEV='false' && webpack --node-env=production --config ./webpack.prod.js",
     "format": "prettier --write lib/**/*.js ui/src/**/*.js test/**/*.js *.js --single-quote --print-width 120",
-    "test": "mocha --timeout 20000 test/**/*.test.js"
+    "test": "mocha --timeout 20000 test/**/*.test.js",
+    "lint": "eslint ./index.js ./lib/**/*.js ./test/**/*.js"
   },
   "husky": {
     "hooks": {
@@ -101,12 +102,12 @@
     "less-loader": "10.2.0",
     "lint-staged": "12.1.2",
     "mocha": "9.1.3",
-    "prettier": "2.4.1",
+    "prettier": "2.5.0",
     "proxyquire": "2.1.3",
     "redux-logger": "3.0.6",
     "style-loader": "3.3.1",
     "url-loader": "4.1.1",
-    "webpack": "5.64.2",
+    "webpack": "5.64.4",
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "3.11.2",
     "webpack-merge": "5.8.0"
