--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "yarn && export BUILD_DEV='true' && export NODE_ENV='development' && webpack-dev-server --progress --colors --watch --config ./webpack.dev.js",
     "prod": "export BUILD_DEV='false' && webpack --node-env=production --config ./webpack.prod.js",
     "format": "prettier --write lib/**/*.js ui/src/**/*.js test/**/*.js *.js --single-quote --print-width 120",
-    "test": "mocha --timeout 20000 test/**/*.test.js"
+    "test": "mocha --timeout 20000 test/**/*.test.js",
+    "lint": "eslint ./index.js ./lib/**/*.js ./test/**/*.js"
   },
   "husky": {
     "hooks": {
@@ -52,29 +53,29 @@
     "Firefox ESR"
   ],
   "dependencies": {
-    "@rematch/core": "2.1.0",
-    "@rematch/loading": "2.1.0",
-    "@sendgrid/mail": "7.4.7",
+    "@rematch/core": "2.2.0",
+    "@rematch/loading": "2.1.2",
+    "@sendgrid/mail": "7.6.0",
     "axios": "0.24.0",
     "axios-retry": "^3.2.4",
     "body-parser": "1.19.0",
     "cookie-session": "1.4.0",
     "handlebars": "4.7.7",
-    "highcharts": "9.2.2",
-    "highcharts-react-official": "3.0.0",
+    "highcharts": "9.3.1",
+    "highcharts-react-official": "3.1.0",
     "lowdb": "1.0.0",
     "markdown": "^0.5.0",
-    "nanoid": "3.1.28",
+    "nanoid": "3.1.30",
     "node-mailjet": "3.3.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-redux": "7.2.5",
+    "react-redux": "7.2.6",
     "react-router": "5.2.1",
     "react-router-dom": "5.3.0",
     "react-switch": "^6.0.0",
-    "redux": "4.1.1",
-    "redux-thunk": "2.3.0",
-    "restana": "4.9.1",
+    "redux": "4.1.2",
+    "redux-thunk": "2.4.0",
+    "restana": "4.9.2",
     "semantic-ui-react": "2.0.4",
     "serve-static": "^1.14.1",
     "slack": "11.0.2",
@@ -82,31 +83,31 @@
     "x-ray": "2.3.4"
   },
   "devDependencies": {
-    "@babel/core": "7.15.5",
-    "@babel/preset-env": "7.15.6",
-    "@babel/preset-react": "7.14.5",
+    "@babel/core": "7.16.0",
+    "@babel/preset-env": "7.16.4",
+    "@babel/preset-react": "7.16.0",
     "babel-eslint": "10.1.0",
-    "babel-loader": "8.2.2",
+    "babel-loader": "8.2.3",
     "chai": "4.3.4",
     "clean-webpack-plugin": "4.0.0",
-    "copy-webpack-plugin": "9.0.1",
-    "css-loader": "6.3.0",
+    "copy-webpack-plugin": "10.0.0",
+    "css-loader": "6.5.1",
     "eslint": "7.32.0",
     "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-react": "7.26.1",
+    "eslint-plugin-react": "7.27.1",
     "file-loader": "6.2.0",
-    "history": "5.0.1",
+    "history": "5.1.0",
     "husky": "4.3.8",
-    "less": "4.1.1",
-    "less-loader": "10.0.1",
-    "lint-staged": "11.1.2",
-    "mocha": "9.1.2",
-    "prettier": "2.4.1",
+    "less": "4.1.2",
+    "less-loader": "10.2.0",
+    "lint-staged": "12.1.2",
+    "mocha": "9.1.3",
+    "prettier": "2.5.0",
     "proxyquire": "2.1.3",
     "redux-logger": "3.0.6",
-    "style-loader": "3.3.0",
+    "style-loader": "3.3.1",
     "url-loader": "4.1.1",
-    "webpack": "5.56.0",
+    "webpack": "5.64.4",
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "3.11.2",
     "webpack-merge": "5.8.0"
