--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fredy",
-  "version": "5.3.2",
+  "version": "5.4.ß",
   "description": "[F]ind [R]eal [E]states [d]amn eas[y].",
   "scripts": {
     "start": "node index.js",
@@ -67,6 +67,7 @@
     "markdown": "^0.5.0",
     "nanoid": "3.1.30",
     "node-mailjet": "3.3.4",
+    "query-string": "^7.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "7.2.6",
