TEMP: Build and push on PRs

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -5,7 +5,9 @@ on:
       - 'master'
     tags:
       - '*'
-
+  pull_request:
+    branches:
+      - 'master'
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
