--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "axios-retry": "^3.2.4",
     "body-parser": "1.19.0",
     "cookie-session": "1.4.0",
+    "dotenv": "^15.0.0",
     "handlebars": "4.7.7",
     "highcharts": "9.3.1",
     "highcharts-react-official": "3.1.0",
