--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@sendgrid/mail": "7.6.0",
     "axios": "0.24.0",
     "axios-retry": "^3.2.4",
+    "better-sqlite3": "^7.5.0",
     "body-parser": "1.19.0",
     "cookie-session": "1.4.0",
     "dotenv": "^15.0.0",
