--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fredy",
-  "version": "5.7.0",
+  "version": "6.0.0",
   "description": "[F]ind [R]eal [E]states [d]amn eas[y].",
   "scripts": {
     "start": "node index.js",
@@ -19,6 +19,7 @@
       "pre-commit": "lint-staged"
     }
   },
+  "type": "module",
   "lint-staged": {
     "*.js": [
       "eslint ./index.js ./lib/**/*.js ./test/**/*.js",
@@ -47,7 +48,7 @@
   },
   "license": "MIT",
   "engines": {
-    "node": ">=14.0.0",
+    "node": ">=15.0.0",
     "npm": ">=7.0.0"
   },
   "browserslist": [
@@ -59,62 +60,62 @@
   "dependencies": {
     "@rematch/core": "2.2.0",
     "@rematch/loading": "2.1.2",
-    "@sendgrid/mail": "7.6.2",
+    "@sendgrid/mail": "7.7.0",
     "axios": "0.27.2",
-    "better-sqlite3": "7.5.1",
+    "better-sqlite3": "7.5.3",
     "body-parser": "1.20.0",
     "cookie-session": "2.0.0",
     "handlebars": "4.7.7",
-    "highcharts": "10.0.0",
+    "highcharts": "10.1.0",
     "highcharts-react-official": "3.1.0",
     "lowdb": "1.0.0",
     "markdown": "^0.5.0",
-    "nanoid": "3.3.3",
-    "node-mailjet": "3.3.13",
+    "nanoid": "4.0.0",
+    "node-mailjet": "4.0.1",
     "query-string": "7.1.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-redux": "8.0.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-redux": "8.0.2",
     "react-router": "5.2.1",
     "react-router-dom": "5.3.0",
-    "react-switch": "^6.0.0",
+    "react-switch": "7.0.0",
     "redux": "4.2.0",
     "redux-thunk": "2.4.1",
-    "restana": "4.9.4",
-    "semantic-ui-react": "2.1.2",
+    "restana": "4.9.6",
+    "semantic-ui-react": "2.1.3",
     "serve-static": "1.15.0",
     "slack": "11.0.2",
     "string-similarity": "^4.0.4",
     "x-ray": "2.3.4"
   },
   "devDependencies": {
-    "@babel/core": "7.17.9",
-    "@babel/preset-env": "7.16.11",
-    "@babel/preset-react": "7.16.7",
+    "@babel/core": "7.18.5",
+    "@babel/preset-env": "7.18.2",
+    "@babel/preset-react": "7.17.12",
     "babel-eslint": "10.1.0",
     "babel-loader": "8.2.5",
     "chai": "4.3.6",
     "clean-webpack-plugin": "4.0.0",
-    "copy-webpack-plugin": "10.2.4",
+    "copy-webpack-plugin": "11.0.0",
     "css-loader": "6.7.1",
     "eslint": "7.32.0",
     "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-react": "7.29.4",
+    "eslint-plugin-react": "7.30.0",
     "file-loader": "6.2.0",
     "history": "5.3.0",
     "husky": "4.3.8",
-    "less": "4.1.2",
-    "less-loader": "10.2.0",
-    "lint-staged": "12.4.1",
-    "mocha": "9.2.2",
-    "prettier": "2.6.2",
+    "less": "4.1.3",
+    "less-loader": "11.0.0",
+    "lint-staged": "13.0.2",
+    "mocha": "10.0.0",
+    "prettier": "2.7.1",
     "proxyquire": "2.1.3",
     "redux-logger": "3.0.6",
     "run-script-os": "^1.1.6",
     "style-loader": "3.3.1",
     "url-loader": "4.1.1",
-    "webpack": "5.72.0",
-    "webpack-cli": "4.9.2",
+    "webpack": "5.73.0",
+    "webpack-cli": "4.10.0",
     "webpack-dev-server": "3.11.2",
     "webpack-merge": "5.8.0"
   }
