--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "@rematch/core": "2.2.0",
     "@rematch/loading": "2.1.2",
     "@sendgrid/mail": "7.7.0",
-    "axios": "0.27.2",
+    "axios": "1.2.1",
     "better-sqlite3": "8.0.1",
     "body-parser": "1.20.1",
     "cookie-session": "2.0.0",
@@ -72,12 +72,12 @@
     "nanoid": "3.3.3",
     "node-mailjet": "3.3.13",
     "query-string": "7.1.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-redux": "8.0.5",
     "react-router": "5.2.1",
     "react-router-dom": "5.3.0",
-    "react-switch": "6.0.0",
+    "react-switch": "7.0.0",
     "redux": "4.2.0",
     "redux-thunk": "2.4.2",
     "restana": "4.9.7",
@@ -88,25 +88,25 @@
     "x-ray": "2.3.4"
   },
   "devDependencies": {
-    "@babel/core": "7.20.5",
+    "@babel/core": "^7.20.5",
+    "@babel/eslint-parser": "^7.19.1",
     "@babel/preset-env": "7.20.2",
     "@babel/preset-react": "7.18.6",
-    "babel-eslint": "10.1.0",
-    "babel-loader": "8.2.5",
+    "babel-loader": "9.1.0",
     "chai": "4.3.7",
     "clean-webpack-plugin": "4.0.0",
-    "copy-webpack-plugin": "10.2.4",
-    "css-loader": "6.7.2",
-    "eslint": "7.32.0",
+    "copy-webpack-plugin": "11.0.0",
+    "css-loader": "6.7.3",
+    "eslint": "^8.30.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-react": "7.31.11",
     "file-loader": "6.2.0",
     "history": "5.3.0",
     "husky": "4.3.8",
     "less": "4.1.3",
-    "less-loader": "10.2.0",
-    "lint-staged": "12.4.1",
-    "mocha": "9.2.2",
+    "less-loader": "11.1.0",
+    "lint-staged": "13.1.0",
+    "mocha": "10.2.0",
     "prettier": "2.8.1",
     "proxyquire": "2.1.3",
     "redux-logger": "3.0.6",
@@ -114,8 +114,8 @@
     "style-loader": "3.3.1",
     "url-loader": "4.1.1",
     "webpack": "5.75.0",
-    "webpack-cli": "4.9.2",
-    "webpack-dev-server": "3.11.2",
+    "webpack-cli": "5.0.1",
+    "webpack-dev-server": "4.11.1",
     "webpack-merge": "5.8.0"
   }
 }
