adding forgotten dependencies

--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "x-ray": "2.3.4"
   },
   "devDependencies": {
+    "@babel/core": "7.20.5",
     "@babel/eslint-parser": "^7.19.1",
     "@babel/preset-env": "7.20.2",
     "@babel/preset-react": "7.18.6",
