--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fredy",
-  "version": "6.0.0",
+  "version": "6.0.1",
   "description": "[F]ind [R]eal [E]states [d]amn eas[y].",
   "scripts": {
     "start": "node index.js",
@@ -91,23 +91,17 @@
     "@babel/eslint-parser": "^7.19.1",
     "@babel/preset-env": "7.20.2",
     "@babel/preset-react": "7.18.6",
-    "babel-loader": "9.1.0",
     "chai": "4.3.7",
-    "css-loader": "6.7.3",
     "eslint": "^8.30.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-react": "7.31.11",
-    "file-loader": "6.2.0",
     "history": "5.3.0",
     "husky": "4.3.8",
     "less": "4.1.3",
-    "less-loader": "11.1.0",
     "lint-staged": "13.1.0",
     "mocha": "10.2.0",
     "prettier": "2.8.1",
     "proxyquire": "2.1.3",
-    "redux-logger": "3.0.6",
-    "style-loader": "3.3.1",
-    "url-loader": "4.1.1"
+    "redux-logger": "3.0.6"
   }
 }
