--- a/package.json
+++ b/package.json
@@ -58,7 +58,6 @@
     "@rematch/loading": "2.1.2",
     "@sendgrid/mail": "7.7.0",
     "@vitejs/plugin-react": "^3.0.0",
-    "axios": "1.2.1",
     "better-sqlite3": "8.0.1",
     "body-parser": "1.20.1",
     "cookie-session": "2.0.0",
@@ -68,6 +67,7 @@
     "lowdb": "1.0.0",
     "markdown": "^0.5.0",
     "nanoid": "3.3.3",
+    "node-fetch": "2.6.7",
     "node-mailjet": "3.3.13",
     "query-string": "7.1.3",
     "react": "18.2.0",
