--- a/conf/config.json
+++ b/conf/config.json
@@ -1,1 +1,1 @@
-{"interval":"60","port":9998,"scrapingAnt":{"apiKey":"","proxy":"datacenter"},"workingHours":{"from":"","to":""}}
+{"interval":"60","port":9998,"scrapingAnt":{"apiKey":"2198fd8d52744fd89bfe5078c8f75c8f","proxy":"datacenter"},"workingHours":{"from":"18:01","to":"19:02"}}
