--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "copy-files": "copyfiles -e \"dist/**/*\" **/*.hbs dist/",
     "build": "tsc && yarn copy-files",
-    "start:server": "yarn build && concurrently \"tsc -w\" \"nodemon --watch dist/lib --watch index.js dist/index.js\"",
+    "start:server": "yarn build && concurrently \"tsc -w\" \"nodemon --watch dist/lib --watch dist/index.js dist/index.js\"",
     "dev": "yarn && rm -rf ./ui/public/* && vite",
     "ui": "rm -rf ./ui/public/* && vite",
     "prod": "yarn && vite build --emptyOutDir",
