--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "fredy",
-  "version": "11.2.0",
+  "version": "11.3.0",
   "description": "[F]ind [R]eal [E]states [d]amn eas[y].",
+  "packageManager": "pnpm@9.1.0",
   "scripts": {
     "start": "node prod.js",
-    "dev": "yarn && rm -rf ./ui/public/* && vite",
+    "dev": "pnpm install && rm -rf ./ui/public/* && vite",
     "ui": "rm -rf ./ui/public/* && vite",
-    "prod": "yarn && vite build --emptyOutDir",
+    "prod": "pnpm install && vite build --emptyOutDir",
     "format": "prettier --write lib/**/*.js ui/src/**/*.jsx test/**/*.js *.js --single-quote --print-width 120",
     "test": "mocha --loader=esmock --timeout 3000000 test/**/*.test.js",
     "lint": "eslint ./index.js ./lib/**/*.js ./test/**/*.js ./ui/src/**/*.jsx"
@@ -41,7 +42,7 @@
   "license": "MIT",
   "engines": {
     "node": ">=20.0.0",
-    "npm": ">=7.0.0"
+    "pnpm": ">=9.0.0"
   },
   "browserslist": [
     "> 0.5%",
