adding genAI enhanced listing processing and storage

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,31 @@
+# Node modules
 node_modules/
+
+# Dependency files
+package.json
+yarn.lock
+package-lock.json
+
+# Config files
+config.json
+*.config.json
+
+# Build output
+dist/
+build/
+
+# Logs
+*.log
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Misc
+.env
+.env.*
+
 ui/public/
 db/
 npm-debug.log
-.DS_Store
 .idea
