fix: make workflow to check source fail for incorrect linting/formatting

--- a/.github/workflows/check_source.yml
+++ b/.github/workflows/check_source.yml
@@ -19,8 +19,8 @@ jobs:
       - name: install
         run: yarn install
 
-      - name: Format
-        run: yarn format
+      - name: Check formatting
+        run: yarn format:check
 
       - name: Lint
         run: yarn lint
