--- a/.babelrc
+++ b/.babelrc
@@ -3,9 +3,7 @@
     [
       "@babel/preset-env",
       {
-        "exclude": [
-          "transform-regenerator"
-        ]
+        "exclude": ["transform-regenerator"]
       }
     ],
     [
