--- a/conf/config.json
+++ b/conf/config.json
@@ -1,1 +1,7 @@
-{"interval":"60","port":9998,"workingHours":{"from":"","to":""},"demoMode":false,"analyticsEnabled":null}
+{
+  "interval": "60",
+  "port": 9998,
+  "workingHours": { "from": "", "to": "" },
+  "demoMode": false,
+  "analyticsEnabled": null
+}
