only check js files

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start:frontend:dev": "vite",
     "build:frontend": "vite build",
     "format": "prettier --write .",
-    "format:check": "prettier --check .",
+    "format:check": "prettier --check \"**/*.js\"",
     "test": "mocha --loader=esmock --timeout 3000000 test/**/*.test.js",
     "lint": "eslint .",
     "lint:fix": "yarn lint --fix"
