upgrading puppeteer / updating config

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@rematch/loading": "2.1.2",
     "@sendgrid/mail": "8.1.5",
     "@visactor/react-vchart": "^2.0.4",
+    "@visactor/vchart": "^2.0.4",
     "@visactor/vchart-semi-theme": "^1.12.2",
     "@vitejs/plugin-react": "5.0.2",
     "better-sqlite3": "^12.2.0",
@@ -75,7 +76,7 @@
     "node-mailjet": "6.0.9",
     "p-throttle": "^8.0.0",
     "package-up": "^5.0.0",
-    "puppeteer": "^24.18.0",
+    "puppeteer": "^24.19.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "query-string": "9.2.2",
